# seascape

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Justfile  LICENSE  MOSAIC-PLAN.md  PLAN.md  README.md  RESEARCH.md  ROADMAP.md  SCALING.md  Snakefile  docker.sh  index.html  index.js  package-lock.json  package.json  pyproject.toml
docs/: build.md  health-check.md  nautical-chart-references.md
patches/: tippecanoe-variable-depth-minzoom.patch
pipelines/: LICENSE.mapterhorn  ab_check.py  aggregation_covering.py  aggregation_merge.py  aggregation_reproject.py  aggregation_run.py  aggregation_tile.py  build.smk  bundle.py  cache_versions.py  common.smk  config.py  contour_run.py  convert_e00.py  depare_run.py  downsampling.py  drying_run.py  encode.py  keys.py  landmask.py  mosaic.py  publish.smk  pyproject.toml  scheduler.py  seam_check.py  smooth.py  soundings_run.py  source_bounds.py  source_catalog.py  source_check.py  source_create_tarball.py  source_datum.py  source_download.py  source_download_african_lakes.py  source_download_erddap.py  source_download_estuarine.py  source_download_filelist.py  source_download_greatlakes.py  source_download_s3.py  source_download_swissbathy.py  (+22 more)
scripts/: blur  build  collect-hcloud-metrics  config.sh  contour  download  gc-collect.sh  ingest  lowzoom  merge-bands  merge-tiles  mosaic  prepare-vector-benchmark  shard-cells  smooth-dem  sources.conf  terrain
sources/: README.md
style/: README.md  index.test.ts  index.ts  package.json
worker/: package-lock.json  package.json  seed.sh  tsconfig.json  (+1 more)
(+152 files in other folders)
