[project]
name = "bathymetry-pipelines"
version = "0.1.0"
description = "Bathymetry tiling pipeline"
license = "BSD-3-Clause"
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy>=1.24",
    "rasterio>=1.3",
    "mercantile>=1.2",
    "pmtiles>=3.4",
    "imagecodecs>=2023.3",
    "pyproj>=3.5",
    "scipy>=1.10",
    "python-ulid>=1.1",
    "requests>=2.32",
    "typing-extensions>=4.0",
    "geopandas>=1.1.3",
    "shapely>=2.1.2",
]

# GDAL/tippecanoe are external CLIs (the Dockerfile is the source of truth), not
# Python deps.
